--- a/nginx/nginx-service.yml
+++ b/nginx/nginx-service.yml
@@ -4,10 +4,10 @@ metadata:
   name: nginx-service
   namespace: nginx
 spec:
+  type: LoadBalancer
   selector:
     app: nginx
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: ClusterIP
